# dE-tr

day1/: hw_200.csv  power.txt  power_output.txt  test.py
day10/: day5-case_study.py  etl_vault.py
day10/data/: customers.csv  products.csv  transactions.csv
day11/: airport.csv  mbatch_vs_cont.py  readcloud.py  server.py  tcpserver.py
day2/: comprehension.py  data.csv  day2-DE.txt  decorator.py  etl_script.py  new_data.csv  problem.py  pytest-param.py  sample.ipynb  test.sql
day2/etl_poetry/etlpoetry/: pyproject.toml
day2/etl_poetry/etlpoetry/src/etlpoetry/: main.py
day2/poetry/sample-project/: .coverage  pyproject.toml
day2/poetry/sample-project/src/sample_project/: __init__.py  main.py
day2/poetry/sample-project/tests/: test_sample_project.py
day4/: day4-sql-1.sql  day4-sql-2.sql
day5/: asdsa.txt  script.py
day6/: drv.py  hod.csv  main.py  rdd_vs_df.py  sample.txt  sample_csv.csv  user_logs.json
day6/spark_test_output/: .part-00000-684676dc-d9e5-47cb-99db-e37e71356508-c000.csv.crc  part-00000-cce05e6d-f427-44cc-9e2a-f1165af6fc9c-c000.csv
day7/: 1more.py  conversion.py  delta-late-cmd.txt  delta_lake.py  emp.json  generator.py  lake2.py  nickname.txt  regions.csv  regions.py  sample_csv.csv  sdfdsf.py
day7/emp_files/: alice.txt  john.txt
day7/new_output/: .part-00000-afe7f602-fd64-4222-9c25-dbca937fb758-c000.snappy.parquet.crc  .part-00000-d37c14ad-6f8b-451b-b812-2cf2fa11dc15-c000.snappy.parquet.crc  (+4 more)
day7/output/_delta_log/: ._last_checkpoint.crc  (+36 more)
day8-day9/: broadcast.py  c-s.py  regions.csv  regions.py  scd2.py  schema.sql  view.py
(+152 files in other folders)
